# s3-chelak

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs  utils.rs
src/apis/: create_bucket.rs  get_handler.rs  get_object.rs  list_buckets.rs  mod.rs  put_handler.rs  put_object.rs
test-app/: Cargo.toml
test-app/src/: main.rs
