[package]
name = "s3-chelak"
version = "0.1.0"
edition = "2021"
description = "A mock S3 server, `chelak` means bucket in Uzbek."
license = "MIT"
authors = ["Sardorbek Pulatov <sardo@hey.com>"]

[dependencies]
actix-web = "4.3"
actix-router = "0.5"
clap = { version = "4.2", features = ["derive"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
quick-xml = { version = "0.28", features = ["serialize"] }
